Ajustes de casos de erro
